--- a/index.html
+++ b/index.html
@@ -79,10 +79,20 @@
             <div>
                 <button id="generator" onclick="generuj()">Generuj
                     heslo</button>
+                    <br>
+                    <br>
                     <button onclick="ukazKomunikaci()">zpět</button>
             </div>
         </div>
-        <div id="vygenerovane-heslo"></div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <input type="text" id="vygenerovane-heslo">
+        <br>
+        <br>
+      
+       
     </div>
     <br>
    
